--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=7b9fec92bafd219150ba",
-    "/css/oruga.css": "/css/oruga.css?id=afe4430a5f8a7d1aaf3b",
-    "/css/app.css": "/css/app.css?id=56239ea661ca4921e493"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
